Update index.htm to point to github repository.

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 			<section id="navigation">
 				<div class="content">
 					<nav>
-						<a href="" />Source Code</a>
+						<a href="https://github.com/SEPR13-SAW/Plane-Panic" />Source Code</a>
 						<a href="" />Documentation</a>
 					</nav>
 				</div>
