Update footer in index.htm.

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 
 		<footer>
 			<div class="content">
-				many footer wow such copyright amaze
+				UoY SEPR team SAW - &copy; 2013
 			</div>
 		</footer>
 	</body>
