--- a/helloworld.htm
+++ b/helloworld.htm
@@ -2,8 +2,8 @@
 	<head>
 		<title>Hello World</title>
 	</head>
-	<body>wow
-	<a href="http://images3.wikia.nocookie.net/creepypasta/images/0/01/DOGE.png" target="_blank"></a>
-	<img src="http://images3.wikia.nocookie.net/creepypasta/images/0/01/DOGE.png" />
+	<body>wow sometimes a good doge has to die
+<--	<a href="http://images3.wikia.nocookie.net/creepypasta/images/0/01/DOGE.png" target="_blank"></a>
+	<img src="http://images3.wikia.nocookie.net/creepypasta/images/0/01/DOGE.png" />-->
 	</body>
 </html>
