--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<header>
 			<section id="title">
 				<div class="content">
+					<img src="images/plane.png" />
 					<h1><a href="/">Plane Panic</a></h1>
 				</div>
 			</section>
