--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
 
 		<section id="body">
 			<div class="content">
-				<h2>Such title</h2>
-				<p>wow many paragraph</p>
-				<h2>Many heading</h2>
-				<p>so text wow amaze</p>
+				<h2>Features</h2>
+				<ul>
+					<li>Written in Java.</li>
+					<li>Uses Lombok to avoid having to manually write getters, setters and some other common functions.</li>
+					<li>Uses Maven for autmoated builds and dependency management.</li>
+					<li>Low resource usage, approximately 135mb of RAM required.</li>
+					<li>Nicely formatted, readable, well commented code.</li>
+				</ul>
+				<h2>Project Setup <span style="font-size: 12px; color: #888;">(For Eclipse)</span></h2>
+				<ol>
+					<li>Install Lombok for Eclipse.</li>
+					<li>Clone the project from the git repository:<br /><code>git clone https://github.com/SEPR13-SAW/Plane-Panic.git</code></li>
+					<li>Set up the project (done automatically with the Maven Eclipse plugin) or manually using:<br /><code>mvn eclipse:eclipse</code></li>
+					<li>Final builds can be done using:<br /><code>mvn assembly:assembly</code></li>
 			</div>
 		</section>
 
