--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li>Written in Java.</li>
 					<li>Uses Lombok to avoid having to manually write getters, setters and some other common functions.</li>
-					<li>Uses Maven for autmoated builds and dependency management.</li>
+					<li>Uses Maven for automated builds and dependency management.</li>
 					<li>Low resource usage, approximately 135mb of RAM required.</li>
 					<li>Nicely formatted, readable, well commented code.</li>
 				</ul>
