adds new manual.pdf homepage title change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<section id="title">
 				<div class="content">
 					<img src="images/plane.png" />
-					<h1><a href="/">Plane Panic</a></h1>
+					<h1><a href="/">Airspace Frenzy 7</a></h1>
 				</div>
 			</section>
 			<section id="navigation">
