--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 				<h2>Features</h2>
 				<ul>
 					<li>Written in Java.</li>
+					<li>Based on Airspace Frenzy 6.</li>
 					<li>Uses Maven for automated builds, running tests and dependency management.</li>
 					<li>Low resource usage, approximately 135mb of RAM required.</li>
 					<li>Nicely formatted, readable, well commented code.</li>
 				</ul>
 				<h2>Project Setup <span style="font-size: 12px; color: #888;">(For Eclipse)</span></h2>
 				<ol>
-					<li>Clone the project from the git repository:<br /><code>git clone https://github.com/SEPR13-SAW/Plane-Panic.git</code></li>
+					<li>Clone the project from the git repository:<br /><code>git clone https://github.com/SEPR13-SAW/atc-game.git</code></li>
 					<li>Set up the project (done automatically with the Maven Eclipse plugin) or manually using:<br /><code>mvn eclipse:eclipse</code></li>
 					<li>Final builds can be done using:<br /><code>mvn assembly:assembly</code></li>
 			</div>
