wow such website

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<li>Low resource usage, approximately 135mb of RAM required.</li>
 					<li>Nicely formatted, readable, well commented code.</li>
 				</ul>
+				<img src="images/wow.png" />
 				<h2>Project Setup <span style="font-size: 12px; color: #888;">(For Eclipse)</span></h2>
 				<ol>
 					<li>Clone the project from the git repository:<br /><code>git clone https://github.com/SEPR13-SAW/atc-game.git</code></li>
@@ -44,7 +45,7 @@
 
 		<footer>
 			<div class="content">
-				&copy; 2013 - SEPR Team SAW
+				&copy; 2014 - SEPR Team SAW
 			</div>
 		</footer>
 	</body>
